@@ -1,3 +1,14 @@
+2008-05-25  Neil Williams  <linux@codehelp.co.uk>
+
+	* backend/Makefile.am: Comment out estron backend - may be
+	better to package that from within estron itself.
+	* configure.ac: Skip estron detection - let estron depend
+	on QOF instead of both on each other.
+	* qof/qofdate.c (date_normalise), (qof_date_parse):
+	* qof/qofstrptime.c (strptime_internal):
+	* qof/test/test-date.c (run_print_scan_tests), (run_qofdate_test):
+	* qof/test/test-stuff.c (get_random_string_without):
+
 2008-05-04  Neil Williams  <linux@codehelp.co.uk>
 
  * qofutil.c (qof_util_param_to_string): Ensure even an 
